# wgpu-experiments-lib

./: Cargo.toml  LICENSE.md
pkg/: index.html  wgpu_experiments.html
src/: camera.rs  cube.rs  lib.rs  model.rs  shader.wgsl  texture.rs  vertex.rs  world.rs
